calibrated, warped, threshold

--- a/find_lane.ipynb
+++ b/find_lane.ipynb
@@ -9,6 +9,7 @@
     "import numpy as np\n",
     "import cv2\n",
     "import glob\n",
+    "import matplotlib.image as mpimg\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib qt\n",
     "\n",
@@ -27,7 +28,12 @@
     "    gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
     "    ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
     "    undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
-    "    return undist"
+    "    return undist\n",
+    "\n",
+    "def draw_lines(img, lines, color=[255, 0, 0], thickness=2):\n",
+    "    for line in lines:\n",
+    "        for x1,y1,x2,y2 in line:\n",
+    "            cv2.line(img, (x1, y1), (x2, y2), color, thickness)"
    ]
   },
   {
@@ -39,7 +45,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['camera_cal\\\\calibration1.jpg', 'camera_cal\\\\calibration10.jpg', 'camera_cal\\\\calibration11.jpg', 'camera_cal\\\\calibration12.jpg', 'camera_cal\\\\calibration13.jpg', 'camera_cal\\\\calibration14.jpg', 'camera_cal\\\\calibration15.jpg', 'camera_cal\\\\calibration16.jpg', 'camera_cal\\\\calibration17.jpg', 'camera_cal\\\\calibration18.jpg', 'camera_cal\\\\calibration19.jpg', 'camera_cal\\\\calibration2.jpg', 'camera_cal\\\\calibration20.jpg', 'camera_cal\\\\calibration3.jpg', 'camera_cal\\\\calibration4.jpg', 'camera_cal\\\\calibration5.jpg', 'camera_cal\\\\calibration6.jpg', 'camera_cal\\\\calibration7.jpg', 'camera_cal\\\\calibration8.jpg', 'camera_cal\\\\calibration9.jpg']\n",
       "undistorted\n"
      ]
     }
@@ -55,8 +60,6 @@
     "\n",
     "# Make a list of calibration images\n",
     "images = glob.glob('camera_cal/calibration*.jpg')\n",
-    "\n",
-    "print(images)\n",
     "\n",
     "# Step through the list and search for chessboard corners \n",
     "for fname in images:\n",
@@ -98,29 +101,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def corners_unwarp(undistorted_img, nx, ny, mtx, dist):\n",
-    "    # 3) Find the chessboard corners\n",
-    "    ret= True\n",
+    "def corners_unwarp(undistorted_img, mtx, dist):\n",
+    "    # c) define 4 destination points dst = np.float32([[,],[,],[,],[,]])\n",
+    "    #dst = np.float32([[0,0],[undistorted_img.shape[1]-100,100],[undistorted_img.shape[1]-100,undistorted_img.shape[0]-100],[100,undistorted_img.shape[0]-100]])\n",
+    "\n",
     "    print(\"img.shape[0]\", undistorted_img.shape[0])\n",
     "    print(\"img.shape[1]\", undistorted_img.shape[1])\n",
-    "    src  =  np.float32([[0, undistorted_img.shape[0]//2], [undistorted_img.shape[1], undistorted_img.shape[0]//2], [undistorted_img.shape[1], undistorted_img.shape[0]], [0, undistorted_img.shape[0]] ])\n",
-    "    # 4) If corners found: \n",
-    "    if ret:\n",
-    "        # c) define 4 destination points dst = np.float32([[,],[,],[,],[,]])\n",
+    "#    src  =  np.float32([[undistorted_img.shape[1]//2 - 20, undistorted_img.shape[0]//2], [undistorted_img.shape[1]//2+20, undistorted_img.shape[0]//2], [undistorted_img.shape[1], undistorted_img.shape[0]], [0, undistorted_img.shape[0]]])\n",
+    "#    src  =  np.float32([[600, undistorted_img.shape[0]//2 + 65], [undistorted_img.shape[1]-600, undistorted_img.shape[0]//2+65], [undistorted_img.shape[1], undistorted_img.shape[0]], [0, undistorted_img.shape[0]]])\n",
+    "    src  =  np.float32([[500, undistorted_img.shape[0]//2 + 75],                             [undistorted_img.shape[1] - 500, undistorted_img.shape[0]//2 + 75],                                 [undistorted_img.shape[1], undistorted_img.shape[0]], [0, undistorted_img.shape[0]]])\n",
+    "    dst  =  np.float32([[0, 0],                                                          [undistorted_img.shape[1], 0],                                 [undistorted_img.shape[1]-200, undistorted_img.shape[0]], [200, undistorted_img.shape[0]]])\n",
+    "#    dst  =  np.float32([[undistorted_img.shape[1]//2 -20, undistorted_img.shape[0]//2], [undistorted_img.shape[1]//2+20, undistorted_img.shape[0]//2], [undistorted_img.shape[1], undistorted_img.shape[0]], [0, undistorted_img.shape[0]]])    \n",
     "\n",
-    "        #dst = np.float32([[0,0],[undistorted_img.shape[1]-100,100],[undistorted_img.shape[1]-100,undistorted_img.shape[0]-100],[100,undistorted_img.shape[0]-100]])\n",
-    "        dst = np.float32([[0,0],[undistorted_img.shape[1], 0], [undistorted_img.shape[1], undistorted_img.shape[0]],[0, undistorted_img.shape[0]]])\n",
-    "        # d) use cv2.getPerspectiveTransform() to get M, the transform matrix\n",
-    "        M = cv2.getPerspectiveTransform(src, dst)\n",
-    "        # e) use cv2.warpPerspective() to warp your image to a top-down view\n",
-    "        warped = cv2.warpPerspective(undistorted, M, (img.shape[1], img.shape[0]), flags=cv2.INTER_LINEAR)\n",
-    "    #delete the next two lines\n",
+    "    \n",
+    "    # d) use cv2.getPerspectiveTransform() to get M, the transform matrix\n",
+    "    M = cv2.getPerspectiveTransform(src, dst)\n",
+    "    print(\"M: \", M)\n",
+    "    # e) use cv2.warpPerspective() to warp your image to a top-down view\n",
+    "    warped = cv2.warpPerspective(undistorted_img, M, (undistorted_img.shape[1], undistorted_img.shape[0]), flags=cv2.INTER_LINEAR)\n",
+    "    \n",
     "    return warped, M"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hls_select(img, thresh=(0, 255)):\n",
+    "    # 1) Convert to HLS color space\n",
+    "    image_hls = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
+    "    # 2) Apply a threshold to the S channel\n",
+    "    channel_s = image_hls[:,:,2]\n",
+    "    # 3) Return a binary image of threshold result\n",
+    "    binary = np.zeros_like(channel_s)\n",
+    "    binary[(channel_s > thresh[0]) & (channel_s <= thresh[1])] = 1\n",
+    "    binary_output = binary # placeholder line\n",
+    "    return binary_output\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +153,9 @@
      "text": [
       "img.shape[0] 720\n",
       "img.shape[1] 1280\n",
-      "warped\n"
+      "M:  [[-5.99713056e-01 -1.66427547e+00  1.02381636e+03]\n",
+      " [ 0.00000000e+00 -2.20373027e+00  9.58622669e+02]\n",
+      " [-0.00000000e+00 -2.60043042e-03  1.00000000e+00]]\n"
      ]
     },
     {
@@ -138,19 +164,25 @@
        "-1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "img = cv2.imread('test_images/straight_lines1.jpg')\n",
-    "undistorted = cal_undistort(img, objpoints, imgpoints)\n",
+    "undistorted_img = cal_undistort(img, objpoints, imgpoints)\n",
+    "cv2.imshow('img_orig',undistorted_img)\n",
+    "cv2.waitKey(1000)\n",
     "\n",
-    "undistorted_gray = cv2.cvtColor(undistorted,cv2.COLOR_BGR2GRAY)\n",
-    "top_down, perspective_M = corners_unwarp(undistorted_gray, nx, ny, mtx, dist)\n",
-    "print(\"warped\")\n",
-    "cv2.imshow('img',top_down)\n",
+    "#rgb = img[...,::-1].copy()\n",
+    "hls_binary = hls_select(undistorted_img, thresh=(70, 255))\n",
+    "hls_binary = hls_binary*255\n",
+    "cv2.imshow('img_binary', hls_binary)\n",
+    "cv2.waitKey(1000)\n",
+    "\n",
+    "top_down, perspective_M = corners_unwarp(hls_binary, mtx, dist)\n",
+    "cv2.imshow('img_unwarped',top_down)\n",
     "cv2.waitKey(1000)"
    ]
   },
@@ -185,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
