use r filter, change distance threshold

--- a/find_lane.ipynb
+++ b/find_lane.ipynb
@@ -50,8 +50,6 @@
     "def find_lane_pixels(binary_warped):\n",
     "    # Take a histogram of the bottom half of the image\n",
     "    histogram = np.sum(binary_warped[binary_warped.shape[0]//2:,:], axis=0)\n",
-    "#     plt.plot(histogram)\n",
-    "#     plt.show()\n",
     "    # Create an output image to draw on and visualize the result\n",
     "    out_img = np.dstack((binary_warped, binary_warped, binary_warped))\n",
     "    # Find the peak of the left and right halves of the histogram\n",
@@ -62,6 +60,9 @@
     "    midpoint = np.int(histogram.shape[0]//2)\n",
     "    leftx_base = np.argmax(histogram[:midpoint])\n",
     "    rightx_base = np.argmax(histogram[midpoint:]) + midpoint\n",
+    "    \n",
+    "#     plt.plot(histogram)\n",
+    "#     plt.show()\n",
     "\n",
     "\n",
     "    # HYPERPARAMETERS\n",
@@ -185,6 +186,7 @@
     "        right_fitx = 1*ploty**2 + 1*ploty\n",
     "        \n",
     "    if adding:\n",
+    "        print(\"adding: \", distance_avg)\n",
     "        right_fitx = left_fitx + distance_avg\n",
     "\n",
     "    ## Visualization ##\n",
@@ -418,6 +420,17 @@
     "    binary_output = binary # placeholder line\n",
     "    return binary_output\n",
     "\n",
+    "def rgb_select(img, thresh=(0, 255)):\n",
+    "    # 1) Convert to HLS color space\n",
+    "    # image_hls = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
+    "    # 2) Apply a threshold to the S channel\n",
+    "    channel_s = img[:,:,0]\n",
+    "    # 3) Return a binary image of threshold result\n",
+    "    binary = np.zeros_like(channel_s)\n",
+    "    binary[(channel_s > thresh[0]) & (channel_s <= thresh[1])] = 1\n",
+    "    binary_output = binary # placeholder line\n",
+    "    return binary_output\n",
+    "\n",
     "def corners_unwarp(undistorted_img):\n",
     "    # c) define 4 destination points dst = np.float32([[,],[,],[,],[,]])\n",
     "    #dst = np.float32([[0,0],[undistorted_img.shape[1]-100,100],[undistorted_img.shape[1]-100,undistorted_img.shape[0]-100],[100,undistorted_img.shape[0]-100]])\n",
@@ -586,12 +599,18 @@
     "    # TODO: put your pipeline here,\n",
     "    # you should return the final output (image where lines are drawn on lanes)\n",
     "    img = image\n",
-    "    undistorted_img = cal_undistort(img, objpoints, imgpoints)\n",
+    "    \n",
+    "    undistorted_img = cal_undistort(img, objpoints, imgpoints) \n",
     "\n",
     "    #rgb = img[...,::-1].copy()\n",
-    "    #hls_binary = hls_select(undistorted_img, thresh=(110, 255))\n",
-    "    hls_binary = hls_select(undistorted_img, thresh=(100, 255))\n",
-    "    hls_binary = hls_binary*255\n",
+    "    hls_binary = hls_select(undistorted_img, thresh=(220, 255))\n",
+    "    rgb_binary = rgb_select(undistorted_img, thresh=(220, 255))\n",
+    "    #hls_binary = hls_select(img, thresh=(150, 255))\n",
+    "    \n",
+    "    combined_binary = hls_binary |  rgb_binary\n",
+    "    \n",
+    "    #hls_binary = hls_binary*255\n",
+    "    hls_binary = combined_binary*255 \n",
     "    \n",
     "    plt.imshow(hls_binary, cmap='gray')\n",
     "    plt.show()\n",
@@ -635,13 +654,18 @@
     "    distance_avg = (distance1 + distance2 + distance_avg)//3\n",
     "    print(\"distance: \", distance1, \" \", distance2, \"  \", distance_avg)\n",
     "    print(\"distance[m]: \", distance1 *xm_per_pix , \" \", distance2*xm_per_pix, \"  \", distance_avg*xm_per_pix)\n",
+    "    print(\"center: \")\n",
+    "    \n",
+    "    image_center = image.shape[1]//2\n",
+    "    current_pos = (right_fitx[-1] + left_fitx[-1]) // 2\n",
+    "    dist_from_center = image_center - current_pos\n",
     "    \n",
     "    \n",
     "    # Calculate the radius of curvature in meters for both lane lines\n",
     "    left_curverad, right_curverad = measure_curvature_real(left_fitx, right_fitx, ploty)\n",
     "    print(\"left_curverad, right_curverad: \", left_curverad, right_curverad)\n",
     "\n",
-    "    if np.abs(distance1 - distance2) > 0.6:\n",
+    "    if np.abs(distance1 - distance2) > 150:\n",
     "        print(\"Using previous\")\n",
     "        result = draw_lines( top_down, img, prev_left_fitx, prev_right_fitx, prev_ploty, np.linalg.inv(perspective_M) )\n",
     "        initialized = False\n",
@@ -652,6 +676,11 @@
     "        \n",
     "        # Filter \n",
     "        result = draw_lines( top_down, img, (left_fitx + prev_left_fitx)//2, (right_fitx + prev_right_fitx)//2, (ploty+prev_ploty)//2, np.linalg.inv(perspective_M) )\n",
+    "    \n",
+    "    cv2.putText(result, \"left_curverad: \" + str.format(\"{0:.2f}\", left_curverad), (100, 90), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255, 255), 3)\n",
+    "    cv2.putText(result, \"right_curverad: \" + str.format(\"{0:.2f}\", right_curverad), (100, 130), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255, 255), 3)\n",
+    "    cv2.putText(result, \"dist_from_center[m]: \" + str.format(\"{0:.2f}\", dist_from_center *xm_per_pix), (100, 170), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255, 255), 3)\n",
+    "\n",
     "    return result"
    ]
   },
@@ -666,9 +695,8 @@
     "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
     "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
     "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
-    "clip1 = VideoFileClip(\"project_video.mp4\").subclip(32,34)\n",
-    "#clip1 = VideoFileClip(\"project_video.mp4\")\n",
-    "#clip1 = VideoFileClip(\"project_video.mp4\")\n",
+    "#clip1 = VideoFileClip(\"project_video.mp4\").subclip(39,41)\n",
+    "clip1 = VideoFileClip(\"project_video.mp4\")\n",
     "white_clip = clip1.fl_image(process_image) #NOTE: this function expects color images!!\n",
     "%time white_clip.write_videofile(white_output, audio=False)"
    ]
@@ -685,6 +713,13 @@
     "</video>\n",
     "\"\"\".format(white_output))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
